# mnist_reverse_search

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  vite.config.ts
rs_crate/: Cargo.toml
rs_crate/.cargo/: config.toml
rs_crate/src/: lib.rs
src/: data-loader.ts  index.ts
