[package]
name = "rs_crate"
version = "0.1.0"
authors = ["Me <aurelien.waite@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
wasm-bindgen = "0.2.92"
reverse_search = "0.0.8"
getrandom = { version = "0.2.14", features = ["js"] }
js-sys = "0.3.69"
ndarray = "0.15.6"
anyhow = "1.0"
#stdweb = "=0.4.6"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
# wee_alloc = { version = "0.4.5", optional = true }

# Clarabel uses timers which aren't supported in WASM. Use a locally
# patched version to remove this dependency
[patch.crates-io]
clarabel = { path = "../../Clarabel.rs" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# default = ["console_error_panic_hook" ,"wee_alloc"]
#default = ["console_error_panic_hook"]

